<resources>
    <string name="app_name">Don Alonso POS</string>
    <string name="title_activity_menu_lateral">Menu Lateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Andres Moreno</string>
    <string name="nav_header_subtitle">Administrador</string>
    <string name="nav_header_desc">Foto de perfil</string>
    <string name="action_settings">Configurar</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_ventas">Ventas</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_compras">Compras</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_proveedores">Proveedores</string>
    <string name="menu_usuarios">Usuarios</string>
    <string name="menu_reportes">Reportes</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_cerrar_sesion">Cerrar Sesion</string>
    <string name="cerrar">Cerrar</string>

    <string name="foto_producto">Foto del Producto</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">En construccion</string>

    <string-array name="tipo_cedula">
        <item>V</item>
        <item>P</item>
        <item>E</item>
        <item>J</item>
        <item>G</item>
    </string-array>

    <string-array name="metodo_pago">
        <item>Efectivo</item>
        <item>Tarjeta</item>
        <item>Pago Movil</item>
        <item>Zelle</item>
    </string-array>

    <string-array name="categoria_producto">
        <item>Helados</item>
        <item>Toppings</item>
        <item>Bebidas</item>
        <item>Postres Especiales</item>
        <item>Helados para Llevar</item>
        <item>Promociones</item>
        <item>Postres Congelados</item>
    </string-array>

    <string-array name="modulo_reportes">
        <item>Seleccione una opción</item>
        <item>Ventas</item>
        <item>Compras</item>
        <item>Productos</item>
    </string-array>

    <string-array name="ventas_reportes">
        <item>Seleccione una opción</item>
        <item>Ventas por fecha (Por favor ingrese el codigo</item>
        <item>Ventas por Clientes</item>
    </string-array>

    <string-array name="compras_reportes">
        <item>Seleccione una opción</item>
        <item>Compras por fecha</item>
        <item>Compras por proveedor</item>
    </string-array>

    <string-array name="productos_reportes">
        <item>Seleccione una opción</item>
        <item>Movimientos de productos por fecha</item>
        <item>Movimientos por producto</item>
        <item>Productos en Inventario</item>
    </string-array>


    <string-array name="motivos">
        <item>Seleccione un motivo</item>
        <item>Productos Dañados o Perdidos</item>
        <item>Reabastecimiento de Productos</item>
        <item>Devoluciones o Reemplazos</item>
        <item>Errores de Conteo o Registro</item>
        <item>Transferencias Entre Almacenes</item>
        <item>Descuentos Especiales</item>
        <item>Auditorías y Ajustes</item>
        <item>Productos Caducados</item>
        <item>Errores en Facturación</item>
        <item>Otros</item>
    </string-array>

    <string-array name="roles">
        <item>Administrador</item>
        <item>Encargado/a</item>
        <item>Cajero/a</item>
    </string-array>

</resources>