<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/icono_inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_ventas"
            android:icon="@drawable/icono_ventas"
            android:title="@string/menu_ventas" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/icono_inventario"
            android:title="@string/menu_productos" />
        <item
            android:id="@+id/nav_compras"
            android:icon="@drawable/icono_compras"
            android:title="@string/menu_compras" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/icono_clientes"
            android:title="@string/menu_clientes" />
        <item
            android:id="@+id/nav_proveedores"
            android:icon="@drawable/icono_proveedores"
            android:title="@string/menu_proveedores" />
        <item
            android:id="@+id/nav_usuarios"
            android:icon="@drawable/icono_usuario"
            android:title="@string/menu_usuarios" />
        <item
            android:id="@+id/nav_reportes"
            android:icon="@drawable/icono_reportes"
            android:title="@string/menu_reportes" />
        <item
            android:id="@+id/nay_ayuda"
            android:icon="@drawable/icono_ayuda"
            android:title="@string/menu_ayuda" />
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/icono_cerrar_sesion"
            android:title="@string/menu_cerrar_sesion" />
    </group>
</menu>